--- a/MainU.fmx
+++ b/MainU.fmx
@@ -9,7 +9,6 @@ object Form2: TForm2
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   OnCreate = FormCreate
-  Touch.GestureManager = GestureManager1
   Left = 660
   Top = 270
   DesignerMasterStyle = 3
@@ -38,6 +37,8 @@ object Form2: TForm2
       StyleLookup = ''
       TabOrder = 0
       Text = 'TabItem1'
+      ExplicitSize.cx = 365.000000000000000000
+      ExplicitSize.cy = 49.000000000000000000
       object VertScrollBox1: TVertScrollBox
         Align = Client
         Size.Width = 730.000000000000000000
@@ -247,6 +248,8 @@ object Form2: TForm2
       StyleLookup = ''
       TabOrder = 0
       Text = 'TabItem2'
+      ExplicitSize.cx = 365.000000000000000000
+      ExplicitSize.cy = 49.000000000000000000
       object WebBrowser1: TWebBrowser
         Align = Client
         Size.Width = 730.000000000000000000
@@ -263,10 +266,5 @@ object Form2: TForm2
   object FDPhysSQLiteDriverLink1: TFDPhysSQLiteDriverLink
     Left = 360
     Top = 384
-  end
-  object GestureManager1: TGestureManager
-    Sensitivity = 80.000000000000000000
-    Left = 352
-    Top = 280
   end
 end
