--- a/MainU.fmx
+++ b/MainU.fmx
@@ -38,6 +38,8 @@ object Form2: TForm2
       StyleLookup = ''
       TabOrder = 0
       Text = 'TabItem1'
+      ExplicitSize.cx = 365.000000000000000000
+      ExplicitSize.cy = 49.000000000000000000
       object VertScrollBox1: TVertScrollBox
         Align = Client
         Size.Width = 730.000000000000000000
@@ -247,6 +249,8 @@ object Form2: TForm2
       StyleLookup = ''
       TabOrder = 0
       Text = 'TabItem2'
+      ExplicitSize.cx = 365.000000000000000000
+      ExplicitSize.cy = 49.000000000000000000
       object WebBrowser1: TWebBrowser
         Align = Client
         Size.Width = 730.000000000000000000
