--- a/MainU.LgXhdpiPh.fmx
+++ b/MainU.LgXhdpiPh.fmx
@@ -21,21 +21,72 @@ inherited Form2_LgXhdpiPh: TForm2_LgXhdpiPh
         Viewport.Height = 646.000000000000000000
         inherited GroupBox1: TGroupBox
           Size.Width = 450.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnContinuousYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnContinuousDontKnow: TSpeedButton
+            Position.X = 338.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox2: TGroupBox
           Size.Width = 450.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnIndependent: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnIndependentDontKnow: TSpeedButton
+            Position.X = 338.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox3: TGroupBox
           Size.Width = 450.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btn2SamplesYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btn2SamplesDontKnow: TSpeedButton
+            Position.X = 338.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox4: TGroupBox
           Size.Width = 450.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnParametricYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnParametricDontKnow: TSpeedButton
+            Position.X = 338.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox5: TGroupBox
           Size.Width = 450.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnCovariatesYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnCovariatesDontKnow: TSpeedButton
+            Position.X = 338.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited ListView1: TListView
           Size.Width = 450.000000000000000000
+          Size.Height = 296.000000000000000000
         end
       end
     end
@@ -44,9 +95,25 @@ inherited Form2_LgXhdpiPh: TForm2_LgXhdpiPh
       ExplicitSize.cx = 100.000000000000000000
       ExplicitSize.cy = 49.000000000000000000
       inherited WebBrowser1: TWebBrowser
+        Touch.GestureManager = GestureManager1
+        OnGesture = WebBrowser1Gesture
         Size.Width = 450.000000000000000000
         Size.Height = 646.000000000000000000
       end
     end
+  end
+  inherited GestureManager1: TGestureManager
+    GestureData = <
+      item
+        Control = Owner
+        Collection = <>
+      end
+      item
+        Control = WebBrowser1
+        Collection = <
+          item
+            GestureID = sgiLeft
+          end>
+      end>
   end
 end
