--- a/MainU.LgXhdpiTb.fmx
+++ b/MainU.LgXhdpiTb.fmx
@@ -22,21 +22,72 @@ inherited Form2_LgXhdpiTb: TForm2_LgXhdpiTb
         Viewport.Height = 780.000000000000000000
         inherited GroupBox1: TGroupBox
           Size.Width = 480.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnContinuousYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnContinuousDontKnow: TSpeedButton
+            Position.X = 368.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox2: TGroupBox
           Size.Width = 480.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnIndependent: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnIndependentDontKnow: TSpeedButton
+            Position.X = 368.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox3: TGroupBox
           Size.Width = 480.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btn2SamplesYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btn2SamplesDontKnow: TSpeedButton
+            Position.X = 368.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox4: TGroupBox
           Size.Width = 480.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnParametricYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnParametricDontKnow: TSpeedButton
+            Position.X = 368.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited GroupBox5: TGroupBox
           Size.Width = 480.000000000000000000
+          TextSettings.Font.StyleExt = {00070000000000000004000000}
+          inherited btnCovariatesYes: TSpeedButton
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
+          inherited btnCovariatesDontKnow: TSpeedButton
+            Position.X = 368.000000000000000000
+            Position.Y = 11.000000000000000000
+            Size.Height = 48.000000000000000000
+          end
         end
         inherited ListView1: TListView
           Size.Width = 480.000000000000000000
+          Size.Height = 430.000000000000000000
         end
       end
     end
